fix box-sizing overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,6 @@
+*, *::before, *::after { box-sizing: border-box; }
+html, body { overflow-x: hidden; max-width: 100%; }
+
 
 *, *::before, *::after {
   box-sizing: border-box;
